# aider-composer

./: .gitignore  .pre-commit-config.yaml  .prettierrc  .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: pre-commit-autoupdate.yml  release.yml  update-dependencies.yml
server/: chat_session_manager.py  cors.py  main.py  models.py
src/: README.md  aiderChatService.ts  extension.ts  types.ts  webViewProvider.ts
src/diffView/: InlineDiff.ts  diffEditor.ts  difftest.mjs  index.ts
src/generateCode/: generateCodeManager.ts
src/shared/: message.ts
src/utils/: disposables.ts  isProductionMode.ts  lineEditor.ts
tests/: __init__.py  test_capture_io.py  test_chat_session_manager.py
ui/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
ui/src/: App.tsx  app.scss  commandApi.ts  index.css  main.tsx  types.ts  vscode.ts
ui/src/components/: list.tsx  scrollArea.tsx
ui/src/stores/: lib.ts  useChatStore.ts  useExtensionStore.ts  useSettingStore.ts
ui/src/views/chat/: ToggleGroup.tsx  chatFileList.tsx  chatMessageList.tsx  chatReferenceItemPreview.tsx  chatStatus.tsx  chatTextArea.tsx  codeTheme.scss  index.tsx  snippetReference.tsx
ui/src/views/history/: index.tsx
ui/src/views/setting/: config.ts  index.tsx
ui/src/views/welcome/: index.tsx
